2017-05-23  Eric Herman <eric@freesa.org>

	Remove ehbi_bytes_shift_left,_right public API functions since bit
	shifting is now supported.

	* README: use ehbi_shift_left in docs
	* src/ehbigint.h: remove ehbi_bytes_shift_left,_right
	* src/ehbigint.c: make _bytes_shift_ functions static
	* tests/test-bytes-shift-left.c: use ehbi_shift_left
	* tests/test-bytes-shift-right.c: use ehbi_shift_right
	* tests/test-shift-right.c: fix comment
	* misc/pre-tidy.patch: respin

2017-05-21  Eric Herman <eric@freesa.org>

	cleanup ehbi_subtract borrowing to make it easier to understand,
	and fix corner-case bug. Allow ehbi_exp_mod to have plenty of bytes
	in case of unusual input.
	collapse ebhi_dec into ehbi_subtract
	always prefix an extra 00 of bytes used regardless of sign
	cleaner temp struct initialization in macro
	fix offset compensation for zero prefixing in test
	add some prime tests above 900000000000

	* src/ehbigint.c: fix subtract; merge ebhi_dec to subtract; fix expmod
	* src/ehbigint-priv.h: cleaner temp struct initialization
	* src/ehbigint-priv.c: always add an extra 00 regardless of sign
	* tests/test-from-binstr-to-binstr-round-trip.c: fix sign error
	* tests/test-is-probably-prime.c: add some big numbers
	* misc/pre-tidy.patch: respin


2017-04-29  Eric Herman <eric@freesa.org>

	finally figured out there was a bug in exp-mod, which caused
	is_probably_prime to fail from time to time ... was not doing
	an initial modulus on the base

	* src/ehbigint.c: fix bug with exp-mod, clarify, #define magic nums
	* src/ehbigint-log.c: improve debug, add "0b00101011" format to output
	* tests/test-comp-exp-mod-with-gmp.c: make non-trival, expose bug
	* tests/test-is-probably-prime.c: check a few more smallish primes
	* tests/test-from-binstr-to-binstr-round-trip.c: ignore zero byte pad
	* tests/test-mul.c: add a longer number
	* tests/test-shift-right.c: more tests
	* Makefile.am: use local ./libtool


2017-04-23  Eric Herman <eric@freesa.org>
